--- a/style.scss
+++ b/style.scss
@@ -1,5 +1,5 @@
 /* 
-Theme Name: Glossop Caravans
+Theme Name: Coachman
 Author: Digitally Disruptive
 Author URI: https://digitallydisruptive.co.uk/
 Version: 1.0.0
