--- a/admin/admin.scss
+++ b/admin/admin.scss
@@ -54,7 +54,8 @@ strong {
     border-radius: 10px;
     margin-bottom: 20px;
 }
-[data-type="carbon-fields/tabs-navigation-item"] {
+[data-type="carbon-fields/tabs-navigation-item"],
+[data-type="carbon-fields/swiper"] {
     padding: 20px;
     border: 1px solid #bfbfbf;
     border-radius: 10px;
