--- a/style.css
+++ b/style.css
@@ -12053,9 +12053,11 @@ h6,
   line-height: 1.2;
   color: var(--black-color); }
 
-@media screen and (max-width: 575px) {
-  p {
-    line-height: 1.1; } }
+p {
+  font-weight: 300; }
+  @media screen and (max-width: 575px) {
+    p {
+      line-height: 1.1; } }
 
 p:last-child {
   margin-bottom: 0 !important; }
