--- a/assets/stylesheets/base/_base.scss
+++ b/assets/stylesheets/base/_base.scss
@@ -5,173 +5,6 @@ img {
     height: auto;
 }
 
-.btn {
-    --bs-btn-font-size: 20px;
-    --bs-btn-padding-x: 20px;
-    --bs-btn-padding-y: 12px;
-    --bs-btn-border-radius: 5px;
-    @include responsive(xs-sm) {
-        --bs-btn-font-size: 15px;
-        --bs-btn-padding-x: 16px;
-    }
-    &.wp-block-button {
-        background-color: transparent;
-        border: none;
-        border-radius: 0;
-        padding: 0;
-        .wp-element-button {
-            display: inline-block;
-            padding: var(--bs-btn-padding-y) var(--bs-btn-padding-x);
-            font-family: var(--bs-btn-font-family);
-            font-size: var(--bs-btn-font-size);
-            font-weight: var(--bs-btn-font-weight);
-            line-height: var(--bs-btn-line-height);
-            color: var(--bs-btn-color);
-            text-align: center;
-            text-decoration: none;
-            vertical-align: middle;
-            cursor: pointer;
-            user-select: none;
-            border: var(--bs-btn-border-width) solid var(--bs-btn-border-color);
-            border-radius: var(--bs-btn-border-radius);
-            background-color: var(--bs-btn-bg);
-            transition:
-                color 0.15s ease-in-out,
-                background-color 0.15s ease-in-out,
-                border-color 0.15s ease-in-out,
-                box-shadow 0.15s ease-in-out;
-        }
-    }
-}
-
-.btn-lg {
-    --bs-btn-padding-y: 25px;
-    --bs-btn-padding-x: 2.5vw;
-    --bs-btn-font-size: 20px;
-    --bs-border-radius-lg: 5px;
-    @include responsive(xs-sm) {
-        --bs-btn-padding-y: 20px;
-        --bs-btn-padding-x: 20px;
-        --bs-btn-font-size: 16px;
-    }
-    @include responsive(xs) {
-        --bs-btn-padding-y: 18px;
-        --bs-btn-padding-x: 18px;
-    }
-}
-
-.form-control {
-    padding: 16px 24px;
-    font-size: 16px;
-}
-
-.form-control-lg {
-    font-size: 20px;
-    padding: 25px 1vw;
-    --bs-border-radius-lg: 5px;
-    @include responsive(xs-sm) {
-        font-size: 14px;
-        padding: 20px;
-    }
-    @include responsive(xs) {
-        padding: 18px;
-    }
-}
-.seach-stock-holder {
-    .form-control-lg,
-    .btn-lg {
-        @media (min-width: 992px) {
-            @media (max-width: 1599px) {
-                padding: 25px 0.7vw;
-                font-size: 18px;
-            }
-            @media (max-width: 1399px) {
-                padding: 25px 0.5vw;
-                font-size: 16px;
-            }
-            @media (max-width: 1199px) {
-                padding: 15px 0.5vw;
-                font-size: 13px;
-            }
-        }
-    }
-}
-.form-control-holder {
-    label {
-        @include responsive(xs-sm) {
-            font-size: 16px;
-        }
-    }
-}
-
-.btn-primary {
-    --bs-btn-color: var(--bs-white);
-    --bs-btn-bg: var(--orange-color);
-    --bs-btn-border-color: var(--orange-color);
-    --bs-btn-hover-color: var(--bs-white);
-    --bs-btn-hover-bg: var(--orange-color);
-    --bs-btn-hover-border-color: var(--orange-color);
-    --bs-btn-focus-shadow-rgb: 49, 132, 253;
-    --bs-btn-active-color: var(--bs-white);
-    --bs-btn-active-bg: var(--orange-color);
-    --bs-btn-active-border-color: var(--orange-color);
-    --bs-btn-active-shadow: none;
-    --bs-btn-disabled-color: var(--bs-white);
-    --bs-btn-disabled-bg: var(--orange-color);
-    --bs-btn-disabled-border-color: var(--orange-color);
-}
-
-.btn-secondary {
-    --bs-btn-color: var(--bs-white);
-    --bs-btn-bg: var(--teal-color);
-    --bs-btn-border-color: var(--teal-color);
-    --bs-btn-hover-color: var(--bs-white);
-    --bs-btn-hover-bg: var(--teal-color);
-    --bs-btn-hover-border-color: var(--teal-color);
-    --bs-btn-focus-shadow-rgb: 49, 132, 253;
-    --bs-btn-active-color: var(--bs-white);
-    --bs-btn-active-bg: var(--teal-color);
-    --bs-btn-active-border-color: var(--teal-color);
-    --bs-btn-active-shadow: none;
-    --bs-btn-disabled-color: var(--bs-white);
-    --bs-btn-disabled-bg: var(--teal-color);
-    --bs-btn-disabled-border-color: var(--teal-color);
-}
-
-.btn-yellow {
-    --bs-btn-color: var(--bs-black);
-    --bs-btn-bg: var(--yellow-color);
-    --bs-btn-border-color: var(--yellow-color);
-    --bs-btn-hover-color: var(--bs-white);
-    --bs-btn-hover-bg: var(--yellow-color);
-    --bs-btn-hover-border-color: var(--yellow-color);
-    --bs-btn-focus-shadow-rgb: 49, 132, 253;
-    --bs-btn-active-color: var(--bs-white);
-    --bs-btn-active-bg: var(--yellow-color);
-    --bs-btn-active-border-color: var(--yellow-color);
-    --bs-btn-active-shadow: none;
-    --bs-btn-disabled-color: var(--bs-white);
-    --bs-btn-disabled-bg: var(--yellow-color);
-    --bs-btn-disabled-border-color: var(--yellow-color);
-}
-
-.btn-blue {
-    --bs-btn-color: var(--bs-white);
-    --bs-btn-bg: var(--blue-color);
-    --bs-btn-border-color: var(--blue-color);
-    --bs-btn-hover-color: var(--bs-white);
-    --bs-btn-hover-bg: var(--blue-color);
-    --bs-btn-hover-border-color: var(--blue-color);
-    --bs-btn-focus-shadow-rgb: 49, 132, 253;
-    --bs-btn-active-color: var(--bs-white);
-    --bs-btn-active-bg: var(--blue-color);
-    --bs-btn-active-border-color: var(--blue-color);
-    --bs-btn-active-shadow: none;
-    --bs-btn-disabled-color: var(--bs-white);
-    --bs-btn-disabled-bg: var(--blue-color);
-    --bs-btn-disabled-border-color: var(--blue-color);
-}
-
 .nav-tabs {
     --bs-nav-link-font-size: inherit;
     --bs-nav-link-color: var(--bs-black);
@@ -718,7 +551,9 @@ span.icons {
         }
     }
 }
-
+.wp-block-button {
+    font-size: 15px;
+}
 .wp-block-button__link.wp-block-button__link {
     font-size: inherit;
     padding: 18px 25px;
