--- a/style.css
+++ b/style.css
@@ -12510,6 +12510,13 @@ h5, .h5 {
 .delear-details .logo-box img {
   max-width: 140px; }
 
+.swiper-slider-holder .swiper-slider-block .swiper {
+  min-height: 100vh; }
+  .swiper-slider-holder .swiper-slider-block .swiper .swiper-wrapper {
+    height: 100%; }
+    .swiper-slider-holder .swiper-slider-block .swiper .swiper-wrapper .swiper-slide {
+      height: 100%; }
+
 /*-----------------------------------------------------------------------------------*/
 /* Plugins
 /*-----------------------------------------------------------------------------------*/
