--- a/style.css
+++ b/style.css
@@ -12510,11 +12510,11 @@ h5, .h5 {
 .delear-details .logo-box img {
   max-width: 140px; }
 
-.swiper-slider-holder .swiper-slider-block .swiper {
+.swiper-slider-holder .swiper {
   min-height: 100vh; }
-  .swiper-slider-holder .swiper-slider-block .swiper .swiper-wrapper {
+  .swiper-slider-holder .swiper .swiper-wrapper {
     height: 100%; }
-    .swiper-slider-holder .swiper-slider-block .swiper .swiper-wrapper .swiper-slide {
+    .swiper-slider-holder .swiper .swiper-wrapper .swiper-slide {
       height: 100%; }
 
 /*-----------------------------------------------------------------------------------*/
