--- a/assets/stylesheets/sections/_blocks.scss
+++ b/assets/stylesheets/sections/_blocks.scss
@@ -1,10 +1,10 @@
 .swiper-slider-holder {
     .swiper {
-        min-height: 100vh;
         .swiper-wrapper {
-            height: 100%;
             .swiper-slide {
-                height: 100%;
+                .swiper-slide--inner {
+                    min-height: 100vh;
+                }
             }
         }
     }
