--- a/assets/stylesheets/sections/_blocks.scss
+++ b/assets/stylesheets/sections/_blocks.scss
@@ -2,10 +2,11 @@
     .swiper {
         .swiper-wrapper {
             .swiper-slide {
-                .swiper-slide--inner {
-                    min-height: 100vh;
-                }
+              
             }
         }
+    }
+    .swiper-pagination {
+      
     }
 }
