--- a/style.css
+++ b/style.css
@@ -12500,7 +12500,8 @@ h5, .h5 {
   position: absolute;
   bottom: 50px;
   left: 0;
-  right: 0; }
+  right: 0;
+  z-index: 1; }
   .swiper-slider-holder .swiper-pagination-holder .swiper-pagination {
     display: flex;
     gap: 40px;
