--- a/style.css
+++ b/style.css
@@ -12512,7 +12512,9 @@ h5, .h5 {
     --swiper-pagination-bullet-inactive-color: var(--bs-white);
     --swiper-pagination-bullet-inactive-opacity: 0.25;
     --swiper-pagination-bullet-opacity: 1;
-    --swiper-pagination-color: var(--maroon) .swiper-pagination-bullet {flex: 1 0 0%;}; }
+    --swiper-pagination-color: var(--maroon); }
+    .swiper-slider-holder .swiper-pagination-holder .swiper-pagination .swiper-pagination-bullet {
+      flex: 1 0 0%; }
 
 /*-----------------------------------------------------------------------------------*/
 /* Plugins
