--- a/style.css
+++ b/style.css
@@ -11673,6 +11673,21 @@ span.icons {
 .md-margin-bottom {
   margin-bottom: var(--md-spacing); }
 
+.md-margin-top {
+  margin-top: var(--md-spacing); }
+
+.lg-margin-top {
+  margin-top: var(--lg-spacing); }
+
+.lg-margin-bottom {
+  margin-bottom: var(--lg-spacing); }
+
+.lg-margin-top {
+  margin-top: var(--lg-spacing); }
+
+.lg-margin-bottom {
+  margin-bottom: var(--lg-spacing); }
+
 @media screen and (max-width: 767px) {
   .md-padding-mobile {
     padding: var(--md-spacing); } }
