--- a/style.css
+++ b/style.css
@@ -11713,6 +11713,9 @@ span.icons {
 .mw-400 {
   max-width: 400px; }
 
+.mw-450 {
+  max-width: 560px; }
+
 .mw-300 {
   max-width: 300px; }
 
@@ -12002,6 +12005,9 @@ h5, .h5 {
 
 .fs-16 {
   font-size: 16px; }
+
+.fs-15 {
+  font-size: 15px; }
 
 .fs-14 {
   font-size: 14px; }
