--- a/assets/stylesheets/utils/_variables.scss
+++ b/assets/stylesheets/utils/_variables.scss
@@ -6,6 +6,7 @@ $image-url: "./assets/images/" !default;
 $font-url: "./assets/fonts/" !default;
 
 :root {
+    --dark: #1c272e;
     --maroon: #841d26;
     --bs-border-radius: 5px;
     --bs-border-color: #cdcdcd;
