--- a/style.css
+++ b/style.css
@@ -11474,7 +11474,8 @@ span.icons {
 
 .wp-block-button__link.wp-block-button__link {
   font-size: inherit;
-  padding: 18px 25px; }
+  padding: 18px 25px;
+  font-size: 15px; }
 
 .wp-block-embed__wrapper {
   position: relative;
