--- a/assets/stylesheets/base/_base.scss
+++ b/assets/stylesheets/base/_base.scss
@@ -6,7 +6,7 @@ img {
 }
 .form-control {
     border-radius: 0;
-    padding: 20px;
+    padding: 17px 20px;
     font-size: 15px;
     border-color: var(--dark);
     line-height: 1;
