--- a/style.css
+++ b/style.css
@@ -11081,7 +11081,7 @@ img {
 
 .form-control {
   border-radius: 0;
-  padding: 20px;
+  padding: 17px 20px;
   font-size: 15px;
   border-color: var(--dark);
   line-height: 1; }
