--- a/assets/stylesheets/base/_helpers.scss
+++ b/assets/stylesheets/base/_helpers.scss
@@ -416,3 +416,7 @@
         grid-template-columns: repeat(1, minmax(0, 1fr)) !important;
     }
 }
+
+.border-left-white {
+    border-left: 1px solid var(--bs-white);
+}
