--- a/assets/stylesheets/base/_typography.scss
+++ b/assets/stylesheets/base/_typography.scss
@@ -77,10 +77,10 @@ h3,
     }
 }
 h4 {
-    font-size: 1.25rem;
+    font-size: 25px;
 }
 h5 {
-    font-size: 1.15rem;
+    font-size: 20px;
 }
 
 .font-sm {
