--- a/style.css
+++ b/style.css
@@ -11472,7 +11472,8 @@ span.icons {
 .wp-block-button.wp-block-button {
   font-size: 15px; }
   .wp-block-button.wp-block-button.is-style-outline .wp-block-button__link {
-    border-width: 1px; }
+    border-width: 1px;
+    padding: 16px 25px; }
 
 .wp-block-button__link.wp-block-button__link {
   font-size: inherit;
