--- a/style.css
+++ b/style.css
@@ -11985,6 +11985,12 @@ h5, .h5 {
 /*-----------------------------------------------------------------------------------*/
 /* Header & Footer
 /*-----------------------------------------------------------------------------------*/
+#masthead {
+  position: absolute;
+  left: 0;
+  top: 0;
+  right: 0; }
+
 @media screen and (min-width: 1200px) {
   .wp-block-site-logo img {
     max-width: 320px; } }
