--- a/assets/stylesheets/sections/_header.scss
+++ b/assets/stylesheets/sections/_header.scss
@@ -1,3 +1,9 @@
+#masthead {
+    position: absolute;
+    left: 0;
+    top: var(--admin-bar-height);
+    right: 0;
+}
 .wp-block-site-logo {
     img {
         @include responsive(lg) {
