--- a/style.css
+++ b/style.css
@@ -11074,10 +11074,11 @@ button.swiper-pagination-bullet {
   font-style: normal;
   font-display: swap; }
 body {
-  --admin-bar-height: 0px; }
+  --admin-bar-height: 0px;
+  --header-height: 107.45px; }
 
 #main {
-  margin-top: var(--header-height, 107.45px); }
+  margin-top: var(--header-height); }
 
 img {
   height: auto; }
