--- a/style.css
+++ b/style.css
@@ -11078,7 +11078,7 @@ body {
   --header-height: 107.45px; }
 
 #main {
-  margin-top: var(--header-height); }
+  margin-top: calc(var(--header-height) - var(--header-height) - var(--header-height)); }
 
 img {
   height: auto; }
