--- a/assets/stylesheets/base/_base.scss
+++ b/assets/stylesheets/base/_base.scss
@@ -1,9 +1,9 @@
 body {
     --admin-bar-height: 0px;
-    --header-height: 107.45px;
+    --header-height-default: 104.453px;
 }
 #main {
-    margin-top: calc(var(--header-height) - var(--header-height) - var(--header-height));
+    margin-top: calc(var(--header-height, var(--header-height-default)) - var(--header-height, var(--header-height-default)) - var(--header-height, var(--header-height-default)));
 }
 img {
     height: auto;
