--- a/style.css
+++ b/style.css
@@ -11075,10 +11075,10 @@ button.swiper-pagination-bullet {
   font-display: swap; }
 body {
   --admin-bar-height: 0px;
-  --header-height: 107.45px; }
+  --header-height-default: 104.453px; }
 
 #main {
-  margin-top: calc(var(--header-height) - var(--header-height) - var(--header-height)); }
+  margin-top: calc(var(--header-height, var(--header-height-default)) - var(--header-height, var(--header-height-default)) - var(--header-height, var(--header-height-default))); }
 
 img {
   height: auto; }
