--- a/admin/admin.css
+++ b/admin/admin.css
@@ -51,7 +51,7 @@ strong {
   margin-bottom: 20px; }
 
 .crb-field-style-1.crb-field-style-1 .cf-field__body input {
-  background-color: var(--orange-color);
+  background-color: var(--maroon);
   font-family: "Proxima Nova";
   color: var(--wp--preset--color--white);
   border-radius: 5px;
