--- a/admin/admin.scss
+++ b/admin/admin.scss
@@ -66,7 +66,7 @@ strong {
 .crb-field-style-1.crb-field-style-1 {
     .cf-field__body {
         input {
-            background-color: var(--orange-color);
+            background-color: var(--maroon);
             font-family: "Proxima Nova";
             color: var(--wp--preset--color--white);
             border-radius: 5px;
