--- a/admin/admin.css
+++ b/admin/admin.css
@@ -52,7 +52,7 @@ strong {
 
 .crb-field-style-1.crb-field-style-1 .cf-field__body input {
   background-color: var(--maroon);
-  font-family: "Proxima Nova";
+  font-family: "Pennypacker";
   color: var(--wp--preset--color--white);
   border-radius: 5px;
   padding: 15px;
