--- a/admin/admin.scss
+++ b/admin/admin.scss
@@ -67,7 +67,7 @@ strong {
     .cf-field__body {
         input {
             background-color: var(--maroon);
-            font-family: "Proxima Nova";
+            font-family: "Pennypacker";
             color: var(--wp--preset--color--white);
             border-radius: 5px;
             padding: 15px;
