--- a/style.css
+++ b/style.css
@@ -12200,6 +12200,9 @@ h5, .h5 {
     .swiper-slider-holder .swiper-pagination-holder .swiper-pagination .swiper-pagination-bullet {
       flex: 1 0 0%; }
 
+.listings-style-1 {
+  max-width: 1200px; }
+
 /*-----------------------------------------------------------------------------------*/
 /* Plugins
 /*-----------------------------------------------------------------------------------*/
