--- a/assets/stylesheets/sections/_blocks.scss
+++ b/assets/stylesheets/sections/_blocks.scss
@@ -23,7 +23,10 @@
     }
 }
 
-
 .listings-style-1 {
-    max-width: 1100px;
+    .swiper-listings-taxonomy {
+        .swiper-slide {
+            width: 230px;
+        }
+    }
 }
