--- a/assets/stylesheets/sections/_blocks.scss
+++ b/assets/stylesheets/sections/_blocks.scss
@@ -28,8 +28,10 @@
         .swiper-slide {
             width: 230px;
             .image-box {
-                object-fit: contain;
                 padding: 50% 0;
+                img {
+                    object-fit: contain;
+                }
             }
         }
     }
