--- a/style.css
+++ b/style.css
@@ -12203,8 +12203,9 @@ h5, .h5 {
 .listings-style-1 .swiper-listings-taxonomy .swiper-slide {
   width: 230px; }
   .listings-style-1 .swiper-listings-taxonomy .swiper-slide .image-box {
-    object-fit: contain;
     padding: 50% 0; }
+    .listings-style-1 .swiper-listings-taxonomy .swiper-slide .image-box img {
+      object-fit: contain; }
 
 /*-----------------------------------------------------------------------------------*/
 /* Plugins
