--- a/assets/stylesheets/base/_base.scss
+++ b/assets/stylesheets/base/_base.scss
@@ -22,17 +22,17 @@ img {
     --bs-nav-link-font-size: inherit;
     --bs-nav-link-color: var(--bs-black);
     --bs-nav-tabs-link-active-color: var(--bs-white);
-
+    border: none;
     .nav-link {
-        font-weight: 600;
-        padding: 25px 45px;
+        padding: 10px 23px;
         border: 1px solid var(--bs-black);
         background-color: var(--bs-white);
         position: relative;
         z-index: 1;
+        border-radius: 0;
         &.active {
-            background-color: var(--green-color);
-            border-color: var(--green-color);
+            background-color: var(--lightgray);
+            border-color: var(--lightgray);
         }
         @include responsive(xs) {
             padding: 18px 25px;
@@ -125,7 +125,6 @@ img {
         }
     }
 }
-
 
 .image-style {
     position: relative;
