--- a/assets/stylesheets/utils/_variables.scss
+++ b/assets/stylesheets/utils/_variables.scss
@@ -8,6 +8,7 @@ $font-url: "./assets/fonts/" !default;
 :root {
     --dark: #1c272e;
     --maroon: #841d26;
+    --lightgray: #f2f2f2;
     --bs-border-radius: 5px;
     --bs-border-color: #cdcdcd;
 }
