--- a/style.css
+++ b/style.css
@@ -11097,12 +11097,12 @@ img {
   --bs-nav-tabs-link-active-color: var(--bs-white);
   border: none; }
   .nav-tabs .nav-link {
-    font-weight: 600;
-    padding: 25px 45px;
+    padding: 10px 23px;
     border: 1px solid var(--bs-black);
     background-color: var(--bs-white);
     position: relative;
-    z-index: 1; }
+    z-index: 1;
+    border-radius: 0; }
     .nav-tabs .nav-link.active {
       background-color: var(--lightgray);
       border-color: var(--lightgray); }
