--- a/assets/stylesheets/utils/_variables.scss
+++ b/assets/stylesheets/utils/_variables.scss
@@ -9,6 +9,7 @@ $font-url: "./assets/fonts/" !default;
     --dark: #1c272e;
     --maroon: #841d26;
     --lightgray: #f2f2f2;
+    --lightgray-2: #eeeff2;
     --bs-border-radius: 5px;
     --bs-border-color: #cdcdcd;
 }
