--- a/style.css
+++ b/style.css
@@ -11046,6 +11046,7 @@ button.swiper-pagination-bullet {
   --dark: #1c272e;
   --maroon: #841d26;
   --lightgray: #f2f2f2;
+  --lightgray-2: #eeeff2;
   --bs-border-radius: 5px;
   --bs-border-color: #cdcdcd; }
 
@@ -11467,41 +11468,8 @@ span.icons {
 .container.medium-container {
   max-width: 1320px; }
 
-.background-white {
-  background-color: var(--white-color); }
-
-.background-primary {
-  background-color: var(--orange-color); }
-
-.background-secondary {
-  background-color: var(--green-color); }
-
-.background-accent {
-  background-color: var(--accent-color); }
-
-.background-lightgray {
-  background-color: var(--lightgray-color); }
-
-.background-lightgray-2 {
-  background-color: var(--lightgray-color-2); }
-
-.background-lightgray-3 {
-  background-color: var(--lightgray-color-3); }
-
-.background-light-gray-4 {
-  background-color: var(--lightgray-color-4); }
-
-.background-yellow {
-  background-color: var(--yellow-color); }
-
-.background-gray {
-  background-color: var(--gray-color); }
-
-.background-white {
-  background-color: var(--bs-white); }
-
-.background-orange-color-3 {
-  background-color: var(--orange-color-3); }
+.bg-lightgray-2 {
+  background-color: var(--lightgray-2); }
 
 .full-image img {
   width: 100%; }
