--- a/assets/stylesheets/base/_helpers.scss
+++ b/assets/stylesheets/base/_helpers.scss
@@ -22,48 +22,8 @@
     }
 }
 
-.background-white {
-    background-color: var(--white-color);
-}
-
-.background-primary {
-    background-color: var(--orange-color);
-}
-
-.background-secondary {
-    background-color: var(--green-color);
-}
-
-.background-accent {
-    background-color: var(--accent-color);
-}
-
-.background-lightgray {
-    background-color: var(--lightgray-color);
-}
-
-.background-lightgray-2 {
-    background-color: var(--lightgray-color-2);
-}
-
-.background-lightgray-3 {
-    background-color: var(--lightgray-color-3);
-}
-.background-light-gray-4 {
-    background-color: var(--lightgray-color-4);
-}
-.background-yellow {
-    background-color: var(--yellow-color);
-}
-
-.background-gray {
-    background-color: var(--gray-color);
-}
-.background-white {
-    background-color: var(--bs-white);
-}
-.background-orange-color-3 {
-    background-color: var(--orange-color-3);
+.bg-lightgray-2 {
+    background-color: var(--lightgray-2);
 }
 
 .full-image {
