--- a/style.css
+++ b/style.css
@@ -12131,7 +12131,8 @@ h5, .h5 {
   left: 0;
   right: 0;
   z-index: 2;
-  height: 0; }
+  height: 0;
+  overflow: hidden; }
 
 /*-----------------------------------------------------------------------------------*/
 /* Plugins
