--- a/style.css
+++ b/style.css
@@ -12133,6 +12133,8 @@ h5, .h5 {
   z-index: 2;
   height: 0;
   overflow: hidden; }
+  .listings--posts.active {
+    height: var(--height); }
 
 /*-----------------------------------------------------------------------------------*/
 /* Plugins
