--- a/assets/stylesheets/sections/_blocks.scss
+++ b/assets/stylesheets/sections/_blocks.scss
@@ -34,6 +34,7 @@
                 }
             }
             .listings--inner {
+                cursor: pointer;
                 &.active {
                     background-color: var(--lightgray-2);
                 }
