--- a/style.css
+++ b/style.css
@@ -12136,12 +12136,7 @@ h5, .h5 {
   right: 0;
   z-index: 2;
   height: 0;
-  overflow: hidden;
-  -webkit-transition: 500ms;
-  -moz-transition: 500ms;
-  -ms-transition: 500ms;
-  -o-transition: 500ms;
-  transition: 500ms; }
+  overflow: hidden; }
   .listings--posts.active {
     height: var(--height); }
 
